// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`CardAssigned > should match dark theme snapshot 1`] = `
<div>
  <div
    class="text-card-foreground shadow-sm border bg-card-gradient px-1.5 w-full py-2 flex flex-col rounded-2xl overflow-hidden border-primary-violet"
  >
    <div
      class="space-y-1.5 p-4 flex w-full flex-row items-start justify-between gap-2"
    >
      <div
        class="flex items-start gap-2"
      >
        <img
          alt="Course Image"
          class="size-[74px] aspect-square rounded-lg"
          src="/src/assets/mock/course-1.png"
        />
        <div
          class="text-2xl font-semibold leading-none tracking-tight flex flex-col gap-1 p-0 !mt-0"
        >
          <div>
            <div
              class="inline-flex items-center border-shades-violet-5 rounded-full border px-2.5 py-1 text-xs font-semibold transition-colors focus:outline-none focus:ring-2 focus:ring-ring focus:ring-offset-2 bg-transparent text-primary-cloud"
            >
              Learning Pathway
            </div>
          </div>
          <h3
            class="text-sm font-bold line-clamp-2 text-primary-cloud"
          >
            CompTIA Security+ certified
          </h3>
          <div
            class="flex items-center gap-2"
          >
            <div
              class="size-2 rounded-full bg-secondary-green"
            />
            <span
              class="text-xs font-medium text-primary-cloud"
            >
              On Track
            </span>
          </div>
        </div>
      </div>
      <div
        class="flex items-start"
      >
        <div
          class="relative inline-flex items-center justify-center"
          style="width: 40px; height: 40px;"
        >
          <svg
            class="rotate-[-90deg]"
            height="40"
            width="40"
          >
            <defs>
              <lineargradient
                id="progressGradient"
                x1="0%"
                x2="0%"
                y1="0%"
                y2="100%"
              >
                <stop
                  offset="0%"
                  stop-color="#5C15A7"
                />
                <stop
                  offset="100%"
                  stop-color="#0098BD"
                />
              </lineargradient>
            </defs>
            <circle
              cx="20"
              cy="20"
              fill="transparent"
              r="18"
              stroke="#2c004f"
              stroke-width="4"
            />
            <circle
              cx="20"
              cy="20"
              fill="transparent"
              r="18"
              stroke="url(#progressGradient)"
              stroke-dasharray="113.09733552923255 113.09733552923255"
              stroke-linecap="round"
              stroke-width="4"
              style="stroke-dashoffset: 108.57344210806325;"
            />
          </svg>
          <span
            class="absolute text-[#72e9ff] text-[10px] font-bold"
            style="transform: translate(-50%, -50%); left: 50%; top: 50%;"
          >
            4
            %
          </span>
        </div>
      </div>
    </div>
    <div
      class="p-6 mt-auto py-2 px-2.5 flex items-center justify-end"
    >
      <button
        class="inline-flex items-center justify-center gap-2 whitespace-nowrap rounded-[40px] text-sm font-bold ring-offset-background transition-colors focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 disabled:pointer-events-none disabled:opacity-50 [&_svg]:pointer-events-none [&_svg]:size-4 [&_svg]:shrink-0 border border-secondary-aqua text-secondary-aqua bg-transparent hover:bg-secondary-aqua hover:text-primary-indigo h-8 px-4"
      >
        Start Lesson
      </button>
    </div>
  </div>
</div>
`;

exports[`CardAssigned > should match light theme snapshot 1`] = `
<div>
  <div
    class="text-card-foreground shadow-sm border border-primary-violet bg-card-gradient px-1.5 w-full py-2 flex flex-col rounded-2xl overflow-hidden"
  >
    <div
      class="space-y-1.5 p-4 flex w-full flex-row items-start justify-between gap-2"
    >
      <div
        class="flex items-start gap-2"
      >
        <img
          alt="Course Image"
          class="size-[74px] aspect-square rounded-lg"
          src="/src/assets/mock/course-1.png"
        />
        <div
          class="text-2xl font-semibold leading-none tracking-tight flex flex-col gap-1 p-0 !mt-0"
        >
          <div>
            <div
              class="inline-flex items-center border-shades-violet-5 rounded-full border px-2.5 py-1 text-xs font-semibold transition-colors focus:outline-none focus:ring-2 focus:ring-ring focus:ring-offset-2 bg-transparent text-primary-cloud"
            >
              Learning Pathway
            </div>
          </div>
          <h3
            class="text-sm font-bold line-clamp-2 text-primary-cloud"
          >
            CompTIA Security+ certified
          </h3>
          <div
            class="flex items-center gap-2"
          >
            <div
              class="size-2 rounded-full bg-secondary-green"
            />
            <span
              class="text-xs font-medium text-primary-cloud"
            >
              On Track
            </span>
          </div>
        </div>
      </div>
      <div
        class="flex items-start"
      >
        <div
          class="relative inline-flex items-center justify-center"
          style="width: 40px; height: 40px;"
        >
          <svg
            class="rotate-[-90deg]"
            height="40"
            width="40"
          >
            <defs>
              <lineargradient
                id="progressGradient"
                x1="0%"
                x2="0%"
                y1="0%"
                y2="100%"
              >
                <stop
                  offset="0%"
                  stop-color="#5C15A7"
                />
                <stop
                  offset="100%"
                  stop-color="#0098BD"
                />
              </lineargradient>
            </defs>
            <circle
              cx="20"
              cy="20"
              fill="transparent"
              r="18"
              stroke="#2c004f"
              stroke-width="4"
            />
            <circle
              cx="20"
              cy="20"
              fill="transparent"
              r="18"
              stroke="url(#progressGradient)"
              stroke-dasharray="113.09733552923255 113.09733552923255"
              stroke-linecap="round"
              stroke-width="4"
              style="stroke-dashoffset: 108.57344210806325;"
            />
          </svg>
          <span
            class="absolute text-[#72e9ff] text-[10px] font-bold"
            style="transform: translate(-50%, -50%); left: 50%; top: 50%;"
          >
            4
            %
          </span>
        </div>
      </div>
    </div>
    <div
      class="p-6 mt-auto py-2 px-2.5 flex items-center justify-end"
    >
      <button
        class="inline-flex items-center justify-center gap-2 whitespace-nowrap rounded-[40px] text-sm font-bold ring-offset-background transition-colors focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 disabled:pointer-events-none disabled:opacity-50 [&_svg]:pointer-events-none [&_svg]:size-4 [&_svg]:shrink-0 border border-secondary-aqua text-secondary-aqua bg-transparent hover:bg-secondary-aqua hover:text-primary-indigo h-8 px-4"
      >
        Start Lesson
      </button>
    </div>
  </div>
</div>
`;

exports[`CardAssigned > should match snapshot for almost complete course 1`] = `
<div>
  <div
    class="text-card-foreground shadow-sm border border-primary-violet bg-card-gradient px-1.5 w-full py-2 flex flex-col rounded-2xl overflow-hidden"
  >
    <div
      class="space-y-1.5 p-4 flex w-full flex-row items-start justify-between gap-2"
    >
      <div
        class="flex items-start gap-2"
      >
        <img
          alt="Course Image"
          class="size-[74px] aspect-square rounded-lg"
          src="/src/assets/mock/course-1.png"
        />
        <div
          class="text-2xl font-semibold leading-none tracking-tight flex flex-col gap-1 p-0 !mt-0"
        >
          <div>
            <div
              class="inline-flex items-center border-shades-violet-5 rounded-full border px-2.5 py-1 text-xs font-semibold transition-colors focus:outline-none focus:ring-2 focus:ring-ring focus:ring-offset-2 bg-shades-violet-3 text-primary-cloud"
            >
              Almost Done
            </div>
          </div>
          <h3
            class="text-sm font-bold line-clamp-2 text-primary-cloud"
          >
            CompTIA Security+ certified
          </h3>
          <span
            class="text-xs text-primary-cloud"
          >
            Due: Apr 9, 2024
          </span>
          <div
            class="flex items-center gap-2"
          >
            <div
              class="size-2 rounded-full bg-secondary-green"
            />
            <span
              class="text-xs font-medium text-primary-cloud"
            >
              On Track
            </span>
          </div>
        </div>
      </div>
      <div
        class="flex items-start"
      >
        <div
          class="relative inline-flex items-center justify-center"
          style="width: 40px; height: 40px;"
        >
          <svg
            class="rotate-[-90deg]"
            height="40"
            width="40"
          >
            <defs>
              <lineargradient
                id="progressGradient"
                x1="0%"
                x2="0%"
                y1="0%"
                y2="100%"
              >
                <stop
                  offset="0%"
                  stop-color="#5C15A7"
                />
                <stop
                  offset="100%"
                  stop-color="#0098BD"
                />
              </lineargradient>
            </defs>
            <circle
              cx="20"
              cy="20"
              fill="transparent"
              r="18"
              stroke="#2c004f"
              stroke-width="4"
            />
            <circle
              cx="20"
              cy="20"
              fill="transparent"
              r="18"
              stroke="url(#progressGradient)"
              stroke-dasharray="113.09733552923255 113.09733552923255"
              stroke-linecap="round"
              stroke-width="4"
              style="stroke-dashoffset: 11.309733552923248;"
            />
          </svg>
          <span
            class="absolute text-[#72e9ff] text-[10px] font-bold"
            style="transform: translate(-50%, -50%); left: 50%; top: 50%;"
          >
            90
            %
          </span>
        </div>
      </div>
    </div>
    <div
      class="p-6 mt-auto py-2 px-2.5 flex items-center justify-end"
    >
      <button
        class="inline-flex items-center justify-center gap-2 whitespace-nowrap rounded-[40px] text-sm font-bold ring-offset-background transition-colors focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 disabled:pointer-events-none disabled:opacity-50 [&_svg]:pointer-events-none [&_svg]:size-4 [&_svg]:shrink-0 border border-secondary-aqua text-secondary-aqua bg-transparent hover:bg-secondary-aqua hover:text-primary-indigo h-8 px-4"
      >
        Start Lesson
      </button>
    </div>
  </div>
</div>
`;

exports[`CardAssigned > should match snapshot for not started course 1`] = `
<div>
  <div
    class="text-card-foreground shadow-sm border border-primary-violet bg-card-gradient px-1.5 w-full py-2 flex flex-col rounded-2xl overflow-hidden"
  >
    <div
      class="space-y-1.5 p-4 flex w-full flex-row items-start justify-between gap-2"
    >
      <div
        class="flex items-start gap-2"
      >
        <img
          alt="Course Image"
          class="size-[74px] aspect-square rounded-lg"
          src="/src/assets/mock/course-1.png"
        />
        <div
          class="text-2xl font-semibold leading-none tracking-tight flex flex-col gap-1 p-0 !mt-0"
        >
          <div>
            <div
              class="inline-flex items-center border-shades-violet-5 rounded-full border px-2.5 py-1 text-xs font-semibold transition-colors focus:outline-none focus:ring-2 focus:ring-ring focus:ring-offset-2 bg-shades-violet-3 text-primary-cloud"
            >
              Required
            </div>
          </div>
          <h3
            class="text-sm font-bold line-clamp-2 text-primary-cloud"
          >
            CompTIA Security+ certified
          </h3>
          <span
            class="text-xs text-primary-cloud"
          >
            Due: Apr 30, 2024
          </span>
          <div
            class="flex items-center gap-2"
          >
            <div
              class="size-2 rounded-full bg-secondary-green"
            />
            <span
              class="text-xs font-medium text-primary-cloud"
            >
              On Track
            </span>
          </div>
        </div>
      </div>
      <div
        class="flex items-start"
      >
        <div
          class="relative inline-flex items-center justify-center"
          style="width: 40px; height: 40px;"
        >
          <svg
            class="rotate-[-90deg]"
            height="40"
            width="40"
          >
            <defs>
              <lineargradient
                id="progressGradient"
                x1="0%"
                x2="0%"
                y1="0%"
                y2="100%"
              >
                <stop
                  offset="0%"
                  stop-color="#5C15A7"
                />
                <stop
                  offset="100%"
                  stop-color="#0098BD"
                />
              </lineargradient>
            </defs>
            <circle
              cx="20"
              cy="20"
              fill="transparent"
              r="18"
              stroke="#2c004f"
              stroke-width="4"
            />
            <circle
              cx="20"
              cy="20"
              fill="transparent"
              r="18"
              stroke="url(#progressGradient)"
              stroke-dasharray="113.09733552923255 113.09733552923255"
              stroke-linecap="round"
              stroke-width="4"
              style="stroke-dashoffset: 113.09733552923255;"
            />
          </svg>
          <span
            class="absolute text-[#72e9ff] text-[10px] font-bold"
            style="transform: translate(-50%, -50%); left: 50%; top: 50%;"
          >
            0
            %
          </span>
        </div>
      </div>
    </div>
    <div
      class="p-6 mt-auto py-2 px-2.5 flex items-center justify-end"
    >
      <button
        class="inline-flex items-center justify-center gap-2 whitespace-nowrap rounded-[40px] text-sm font-bold ring-offset-background transition-colors focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 disabled:pointer-events-none disabled:opacity-50 [&_svg]:pointer-events-none [&_svg]:size-4 [&_svg]:shrink-0 border border-secondary-aqua text-secondary-aqua bg-transparent hover:bg-secondary-aqua hover:text-primary-indigo h-8 px-4"
      >
        Start Lesson
      </button>
    </div>
  </div>
</div>
`;

exports[`CardAssigned > should match snapshot without highlight tag 1`] = `
<div>
  <div
    class="text-card-foreground shadow-sm border border-primary-violet bg-card-gradient px-1.5 w-full py-2 flex flex-col rounded-2xl overflow-hidden"
  >
    <div
      class="space-y-1.5 p-4 flex w-full flex-row items-start justify-between gap-2"
    >
      <div
        class="flex items-start gap-2"
      >
        <img
          alt="Course Image"
          class="size-[74px] aspect-square rounded-lg"
          src="/src/assets/mock/course-1.png"
        />
        <div
          class="text-2xl font-semibold leading-none tracking-tight flex flex-col gap-1 p-0 !mt-0"
        >
          <span
            class="text-sm font-medium text-primary-cloud"
          >
            Lesson 5
          </span>
          <h3
            class="text-sm font-bold line-clamp-2 text-primary-cloud"
          >
            CompTIA Security+ certified
          </h3>
          <span
            class="text-xs text-primary-cloud"
          >
            Due: Apr 14, 2024
          </span>
          <div
            class="flex items-center gap-2"
          >
            <div
              class="size-2 rounded-full bg-secondary-green"
            />
            <span
              class="text-xs font-medium text-primary-cloud"
            >
              On Track
            </span>
          </div>
        </div>
      </div>
      <div
        class="flex items-start"
      >
        <div
          class="relative inline-flex items-center justify-center"
          style="width: 40px; height: 40px;"
        >
          <svg
            class="rotate-[-90deg]"
            height="40"
            width="40"
          >
            <defs>
              <lineargradient
                id="progressGradient"
                x1="0%"
                x2="0%"
                y1="0%"
                y2="100%"
              >
                <stop
                  offset="0%"
                  stop-color="#5C15A7"
                />
                <stop
                  offset="100%"
                  stop-color="#0098BD"
                />
              </lineargradient>
            </defs>
            <circle
              cx="20"
              cy="20"
              fill="transparent"
              r="18"
              stroke="#2c004f"
              stroke-width="4"
            />
            <circle
              cx="20"
              cy="20"
              fill="transparent"
              r="18"
              stroke="url(#progressGradient)"
              stroke-dasharray="113.09733552923255 113.09733552923255"
              stroke-linecap="round"
              stroke-width="4"
              style="stroke-dashoffset: 28.27433388230814;"
            />
          </svg>
          <span
            class="absolute text-[#72e9ff] text-[10px] font-bold"
            style="transform: translate(-50%, -50%); left: 50%; top: 50%;"
          >
            75
            %
          </span>
        </div>
      </div>
    </div>
    <div
      class="p-6 mt-auto py-2 px-2.5 flex items-center justify-end"
    >
      <button
        class="inline-flex items-center justify-center gap-2 whitespace-nowrap rounded-[40px] text-sm font-bold ring-offset-background transition-colors focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 disabled:pointer-events-none disabled:opacity-50 [&_svg]:pointer-events-none [&_svg]:size-4 [&_svg]:shrink-0 border border-secondary-aqua text-secondary-aqua bg-transparent hover:bg-secondary-aqua hover:text-primary-indigo h-8 px-4"
      >
        Start Lesson
      </button>
    </div>
  </div>
</div>
`;
